整形後データのcsv出力処理追加

--- a/clean_horse_result.ipynb
+++ b/clean_horse_result.ipynb
@@ -3462,6 +3462,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dummy.to_csv('clean_result_data.csv', encoding='utf_8', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
